terraform/aws/route_tables/main.tf
resource "aws_route_table" "public" {
  vpc_id = var.vpc_id
  route { cidr_block = "0.0.0.0/0" gateway_id = var.igw_id }
  tags = { Name = "public-rt" }
}

resource "aws_route_table_association" "public_assoc" {
  count          = length(var.public_subnets)
  subnet_id      = var.public_subnets[count.index]
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  count  = length(var.private_subnets)
  vpc_id = var.vpc_id
  route { cidr_block = "0.0.0.0/0" nat_gateway_id = var.nat_ids[count.index] }
  tags = { Name = "private-rt-${count.index}" }
}

resource "aws_route_table_association" "private_assoc" {
  count          = length(var.private_subnets)
  subnet_id      = var.private_subnets[count.index]
  route_table_id = aws_route_table.private[count.index].id
}
